--- a/HRD/HRD - Tambah Karyawan/HRD - Tambah Karyawan.css
+++ b/HRD/HRD - Tambah Karyawan/HRD - Tambah Karyawan.css
@@ -73,6 +73,11 @@ article div#konten input#tombolSave{
     float: right;
     margin-top: 35%;
 }
+article div#konten input#tombolCancel{
+    width: 100px;
+    float: right;
+    margin-top: 35%;
+}
 /*------------------------bagian konten---------------------*/
 
 /*----------tombol utk up ke atas----------*/
@@ -94,7 +99,7 @@ a#tombolUp:hover{ /*kalau dihover warnanya lebih jelas*/
 /*---------------------------media query---------------------------*/
 @media screen and (max-width: 680px){ /*view port kecil, utk HP*/
     /*-----------------utk konten-----------------*/
-    body article div#konten{
+    article div#konten{
         float: none; /*hilangkan float agar pindah kebawah*/
         width: 100%;
         overflow-y: unset;
@@ -136,9 +141,13 @@ a#tombolUp:hover{ /*kalau dihover warnanya lebih jelas*/
     article div#konten input#pass2{
         margin-left: 10px;
     }
-    article div#konten input#tombolSave{
-        margin-top: 0px;
-        margin-right: 3%;
+    article div#konten input#tombolSave, article div#konten input#tombolCancel{
+        float: none;
+        margin: auto;
+    }
+    article div#konten div#dataKaryawan div.kanan{
+        float: none;
+        margin-right: 0px;
     }
     /*-----------------utk konten-----------------*/
 }
