--- a/HRD/HRD - Daftar Jabatan/HRD - Daftar Jabatan.css
+++ b/HRD/HRD - Daftar Jabatan/HRD - Daftar Jabatan.css
@@ -13,73 +13,38 @@ article div#konten #sorting #selectSortBy{ /*"sort by" (dropbox-nya)*/
 }
 /*keperluan sort------*/
 
-/*keperluan search------*/
-article div#konten #searching{ /*"search by" (label, dropbox, input, dan icon-nya)*/
-    float: right;   /*letakkan di kanan, sebelahan dg sort by*/
-    width: 350px;
-    margin-right: 2%; /*jarak dgn sort by*/
-}
-article div#konten #searching #searchBox{ /*"search by" (input, dan icon-nya)*/
-    float: right;   /*lettakkan di kanan parent #searching*/
-}
-article div#konten #searching #searchBox #inputSearchBy{ /*"search by" (input-nya)*/
-    width: 150px;
-    border-radius: 5px;
-}
-article div#konten #searching #selectSearchBy{ /*"search by" (dropbox-nya)*/
-    width: 120px;
-    margin-left: 3px;   /*memberi jarak ke kanan dengan label yg diatasnya*/
-    margin-right: 10px; /*memberi jarak dengan box inputan*/
-    border-radius: 5px;
-}
-/*keperluan search------*/
-
-/*daftar jabatannya------*/
-article div#konten div#daftarJabatan{ /*kotak daftar jabatan yg bisa di scroll*/
+/*------------------------bagian konten---------------------*/
+article div#konten div#inputan{ /*bagian input2 dibawah judul*/
+    margin-left: 50px;
     clear: both;
-    width: 95%;
-    margin: auto;   /*tengahin*/
-    margin-top: 90px;
 }
-article div#konten div#daftarJabatan div.kiri{  /*bagian kiri (id jabatan sampai gaji)*/
-    float: left;
-}
-article div#konten div#daftarJabatan div.kanan{ /*bagian kanan (keterangan dan tombol save delete)*/
-    width: 50%;
-    float: right;
-}
-article div#konten div#daftarJabatan div.kanan label{
-    float: left;
-    margin-right: 30px;
-}
-article div#konten div#daftarJabatan div.kanan div.bagianTombol{ /*div tombol save dan delete*/
-    float: right;
-    margin-right: 25px;
-}
-article div#konten div#daftarJabatan div.kiri input{
+article div#konten input{ /*atur lebar kotak inputan*/
     width: 200px;
 }
-article div#konten div#daftarJabatan div.kanan textarea{
-    width: 300px;
-    height: 60px;
+article div#konten input#idJabatan{ /*inputan ID jabatan*/
+    margin-left: 30px;
 }
-article div#konten div#daftarJabatan hr{ /*garis pembatas jabatan satu dg lainnya*/
-    clear: both;
-    width: 95%;
+article div#konten input#namaJabatan{   /*inputan nama jabatan*/
+    margin-left: 5px;
 }
-article div#konten div#daftarJabatan label, article div#konten div#daftarJabatan input{
-    margin-bottom: 10px;
+article div#konten input#gaji{  /*inputan gaji*/
+    margin-left: 76px;
 }
-article div#konten div#daftarJabatan input.idJabatan{
-    margin-left: 36px;
+article div#konten div#divKet{  /*tulisan "Keterangan"*/
+    float: left; /*supaya bisa disebelah textarea*/
 }
-article div#konten div#daftarJabatan input.namaJabatan{
-    margin-left: 10px;
+article div#konten textarea#keterangan{ /*inputan keterangan*/
+    margin-left: 30px;
+    width: 400px;
+    height: 150px;
 }
-article div#konten div#daftarJabatan input.gaji{
-    margin-left: 83px;
+/*tombol utk save -------*/
+article div#konten input#tombolSave{
+    width: 100px;
+    float: right;
+    margin-top: 30px;
+    margin-right: 30px;
 }
-/*daftar jabatannya------*/
 /*------------------------bagian konten---------------------*/
 
 
@@ -89,59 +54,19 @@ article div#konten div#daftarJabatan input.gaji{
     article div#konten{
         float: none; /*hilangkan float agar pindah kebawah*/
         width: 100%;
-        overflow-y: unset;
     }
-    /*kepeluan search dan sort*/
-    article div#konten #sorting, article div#konten #searching{ /*media search dan sort diketengahi*/
-        margin: auto;
-        margin-bottom: 5px;
-        text-align: center;
-        float: none;    /*hilangi float*/
-        width: 100%;
-    }
-    article div#konten #searching #searchBox{
-        float: none;
-        margin: auto;
-        margin-top: 10px;
-    }
-    article div#konten #searching #searchBox::before { /*menambahkan new line sebelum id="searchBox"*/
-        content: "\A";  /*tambahkan newline, spti <br>*/
-    }
-    article div#konten #searching #selectSearchBy, article div#konten #sorting #selectSortBy{
+    article div#konten div#inputan{ /*bagian input2 dibawah judul*/
         margin: 0px;
-        margin: auto;
     }
-    /*kepeluan search dan sort*/
-    /*daftar jabatan*/
-    article div#konten div#daftarJabatan{
-        margin: auto;
-        width: 95%;
-        overflow-y: unset;
+    article div#konten input, article div#konten textarea#keterangan{ /*semua kotak input dan textarea*/
+        width: 150px;
     }
-    article div#konten div#daftarJabatan input.idJabatan{
-        margin-left: 25px;
-    }
-    article div#konten div#daftarJabatan input.namaJabatan{
-        margin-left: 0px;
-    }
-    article div#konten div#daftarJabatan input.gaji{
-        margin-left: 72px;
-    }
-    article div#konten div#daftarJabatan div.kiri input{
-        width: 145px;
-    }
-    article div#konten div#daftarJabatan div.kanan{
-        clear: both;
+    /*tombol utk save -------*/
+    article div#konten input#tombolSave{
         float: none;
-        width: 95%;
-    }
-    article div#konten div#daftarJabatan div.kanan textarea{
-        width: 100%;
-    }
-    article div#konten div#daftarJabatan div.kanan div.bagianTombol{
-        float: none;
-        margin: auto;
-        text-align: center;
+        margin-top: 0px;
+        margin-left: 110px;
+        width: 80px;
     }
     /*-----------------utk konten-----------------*/
 }
