--- a/kasir/kasirPeminjaman/cssKasirPeminjaman.css
+++ b/kasir/kasirPeminjaman/cssKasirPeminjaman.css
@@ -13,7 +13,7 @@ input{border-radius: 5px;}
 div#pinggirKanan{   /*sebelah kanan (id buku)*/
     float: right;
     margin-right: 100px;
-    margin-top: 0px;
+    margin-top: 62px;
 }
 div.position input[type=text]{  /*semua inputan text*/
     height: 20px;
@@ -24,15 +24,15 @@ div.position input[type=text]{  /*semua inputan text*/
     font-size: 110px;
     margin-right: 20px;
 }
-div#divSimbolBuku, div#divSimbolTransaksi{  /*div pembungkus simbol buku*/
+div#divSimbolBuku{  /*div pembungkus simbol buku*/
     float: left;
 }
-#simbolBuku,#simbolTransaksi{    /*simbol buku*/
+#simbolBuku{    /*simbol buku*/
     font-size: 35px;
     margin-top: 20px;
     margin-right: 20px;
 }
-div#divInputIdBuku, div#divIdTransaksi{
+div#divInputIdBuku{
     float: left;
 }
 div#divIdDanPlus{
@@ -154,13 +154,13 @@ article div#konten input#cancel{    /*tombol cancel*/
         clear: both;
         float: none;
     }
-    div#divSimbolBuku, div#divSimbolTransaksi{  /*div pembungkus simbol buku*/
+    div#divSimbolBuku{  /*div pembungkus simbol buku*/
         clear: both;
         float: none;
         width: 100%;
         text-align: center;
     }
-    #simbolBuku, #simbolTransaksi{    /*div pembungkus input id buku*/
+    #simbolBuku{    /*div pembungkus input id buku*/
         text-align: center;
         font-size: 50px;
         margin: 30px 0px 10px 0px;
@@ -168,25 +168,16 @@ article div#konten input#cancel{    /*tombol cancel*/
     div#pinggirKanan input[type=text]{
         width: 160px;
     }
-    div#divIdTransaksi{
-        width: 100%;
-        float: none;
-        margin: auto;
-        text-align: center;
-    }
-    div#divIdTransaksi #idTransaksi{
-        width: 200px;
-    }
     div#divIdDanPlus{
         width:220px;
         float: none;
         margin: auto;
         text-align: center;
     }
-    div#divInputIdBuku, div#divIdTransaksi{
+    div#divInputIdBuku{
         margin: 0px;
     }
-    div#divInputIdBuku label, div#divIdTransaksi label{   /*label ID buku*/
+    div#divInputIdBuku label{   /*label ID buku*/
         margin-left: 45px;
     }
     div#divSimbolPlus{   /*div pembungkus simbol plus*/
