--- a/HRD/HRDEditKaryawan/HRDEditKaryawan.css
+++ b/HRD/HRDEditKaryawan/HRDEditKaryawan.css
@@ -64,13 +64,14 @@ article div#konten input#pass2{
 article div#konten input#tombolSave{
     width: 100px;
     float: right;
-    margin-top: 35%;
+    margin-top: 5px;
     margin-right: 30px;
 }
 article div#konten input#tombolCancel{
     width: 100px;
     float: right;
-    margin-top: 35%;
+    margin-top: 5px;
+    margin-right: 8px;
 }
 /*------------------------bagian konten---------------------*/
 
