--- a/Manager/managerDaftarPeminjaman/managerDaftarPeminjaman.css
+++ b/Manager/managerDaftarPeminjaman/managerDaftarPeminjaman.css
@@ -57,6 +57,85 @@ td{
     border: none;
 }
 /*tabel daftar peminjaman------*/
+
+/*pop up message*/
+div#blur{       /*utk blur semuanya*/
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    background-color:rgba(50,50,50,0.7);    
+    display: none;
+}
+div#popup{  /*kotak popup*/
+    position: fixed;
+    top: 5%;
+    left: 15%;
+    height: 90%;
+    width: 70%;
+    margin: auto;
+    background-color: rgba(255, 255, 255, 1);
+    color: black;
+    display: none;
+}
+div#popup .simbolX{ /*simbol x untuk close popup*/
+    float: right;
+    margin-top: 10px;
+    margin-right: 10px;
+    color: black;
+    font-size: 30px;
+}
+div#popup div#parentIsiPopup{
+    margin: auto;
+    height: 80%;
+    width: 35%;
+    margin-top: 20px;
+    overflow: hidden;
+}
+div#popup div#isiPopup{
+    height: 100%;
+    width: 100%;
+    overflow-y: scroll;
+    padding-right: 17px;        /*keperluan supaya scrollbarnya hilang, tp ttep bisa scroll*/
+    box-sizing: content-box;    /*keperluan supaya scrollbarnya hilang*/
+}
+div#popup div#isiPopup div.divSimbolPopup{
+    width: 20%;
+    height: 50px;
+    clear: both;
+    float: left;
+}
+div#popup .simbolPopup{ /*font awesome di popup*/
+    margin-top: 15px;
+    font-size: 40px;
+}
+div#popup div.popupSatuan{
+    margin-bottom: 10px;
+}
+div#popup .atribut{ /*nama:, id: ,gender: , dll*/
+    width: 100%;
+}
+div#popup .value{   /*valuenya (no,nama,email)*/
+    width: 200px;
+    border: 2px solid blue;
+    overflow: hidden;   /*jika data melebihi batas tabel, di hidden*/
+    text-overflow: ellipsis; /*supaya teks panjang berubah jadi ...*/
+    white-space: nowrap; /*supaya tidak di-newline*/
+}
+div#popup select.value{
+    width: 220px;
+}
+div#popup .value#popupIdMember{
+    background-color: blue;
+    color: white;
+}
+input#tombolDetailMember{
+    margin-right: 50px;
+    width: 50px;
+    float: right;
+}
+/*pop up message*/
 /*------------------------bagian konten---------------------*/
 
 
@@ -102,5 +181,26 @@ td{
         white-space: pre-line;  /*bisa ada new line kalau data panjang dan ada spasinya*/
     }
     /*tabel daftar peminjaman------*/
+    /*pop up message*/
+    div#popup{  
+        margin: auto;
+        top: 20%;
+        height: 60%;
+        left: 5%;
+        width: 90%;
+    }
+    div#popup .simbolX{     /*X utk close popup*/
+        font-size: 20px;
+    }
+    div#popup .simbolPopup{   /*fontawesome ditiadakan*/
+        display: none;
+    }
+    div#popup .atribut{
+        width: 20%;
+    }
+    div#popup .value{
+        width: 80%;
+    }
+    /*pop up message*/
     /*-----------------utk konten-----------------*/
 }
