--- a/Manager/managerDaftarPeminjaman/managerDaftarPeminjaman.css
+++ b/Manager/managerDaftarPeminjaman/managerDaftarPeminjaman.css
@@ -89,7 +89,7 @@ div#popup .simbolX{ /*simbol x untuk close popup*/
 div#popup div#parentIsiPopup{
     margin: auto;
     height: 80%;
-    width: 35%;
+    width: 95%;
     margin-top: 20px;
     overflow: hidden;
 }
@@ -100,40 +100,26 @@ div#popup div#isiPopup{
     padding-right: 17px;        /*keperluan supaya scrollbarnya hilang, tp ttep bisa scroll*/
     box-sizing: content-box;    /*keperluan supaya scrollbarnya hilang*/
 }
-div#popup div#isiPopup div.divSimbolPopup{
-    width: 20%;
-    height: 50px;
-    clear: both;
-    float: left;
+div#popup table#tablePopup{
+    width: 80%;
+    margin-left: 0px;
 }
-div#popup .simbolPopup{ /*font awesome di popup*/
-    margin-top: 15px;
-    font-size: 40px;
+div#popup table#tablePopup td, div#popup table#tablePopup tr{
+    border: none;
+    text-align: left;
+    height: 35px;
 }
-div#popup div.popupSatuan{
-    margin-bottom: 10px;
+div#popup table#tablePopup .divSimbolPopup{
+    width: 8%;
 }
-div#popup .atribut{ /*nama:, id: ,gender: , dll*/
-    width: 100%;
+div#popup table#tablePopup .divSimbolPopup .simbolPopup{
+    font-size: 25px;
 }
-div#popup .value{   /*valuenya (no,nama,email)*/
-    width: 200px;
-    border: 2px solid blue;
-    overflow: hidden;   /*jika data melebihi batas tabel, di hidden*/
-    text-overflow: ellipsis; /*supaya teks panjang berubah jadi ...*/
-    white-space: nowrap; /*supaya tidak di-newline*/
+div#popup table#tablePopup .atribut{
+    width: 15%;
 }
-div#popup select.value{
-    width: 220px;
-}
-div#popup .value#popupIdMember{
-    background-color: blue;
-    color: white;
-}
-input#tombolDetailMember{
-    margin-right: 50px;
-    width: 50px;
-    float: right;
+div#popup table#tablePopup .value{
+    width: 77%;
 }
 /*pop up message*/
 /*------------------------bagian konten---------------------*/
