--- a/HRD/HRD - Tambah Jabatan/HRD - Tambah Jabatan.css
+++ b/HRD/HRD - Tambah Jabatan/HRD - Tambah Jabatan.css
@@ -22,6 +22,13 @@ article div#konten textarea#keterangan{ /*inputan keterangan*/
     width: 400px;
     height: 150px;
 }
+article div#konten div#aturanIdJabatan{
+    float: right;
+    font-style: italic;
+    font-size: 13px;
+    background-color: rgba(255, 255, 255, 0.3);
+    margin-right: 100px;
+}
 /*tombol utk save -------*/
 article div#konten input#tombolSave{
     width: 100px;
