--- a/Gudang/gudangDefault.css
+++ b/Gudang/gudangDefault.css
@@ -295,6 +295,10 @@ article div#konten input#tombol{
 article div#konten input#tombol:hover{
     background-color: gray;
 }
+.disable{
+    background-color: grey !important;
+    color: white !important;
+}
 /*------------------------bagian input---------------------*/
 
 /*----------tombol utk up ke atas----------*/
