--- a/kasir/kasirDaftarKomik/cssKasirDaftarKomik.css
+++ b/kasir/kasirDaftarKomik/cssKasirDaftarKomik.css
@@ -35,6 +35,40 @@ article div#judul #searching #selectSearchBy{ /*"search by" (dropbox-nya)*/
     margin-right: 10px; /*memberi jarak dengan box inputan*/
 }
 
+article div#judul div#simple a{
+    font-weight: bold;
+    margin-left: 20px;
+    font-size: 20px;
+}
+article div#judul div#advanced a{
+    font-weight: bold;
+    margin-left: 20px;
+    font-size: 20px;
+}
+article div#judul div#advanced label{
+    margin-left: 20px;
+}
+article div#judul input{
+    width: 90%;
+}
+article div#judul input#jdl{
+    margin-left: 50px;
+}
+article div#judul input#pnl{
+    margin-left: 38px;
+}
+article div#judul input#pnb{
+    margin-left: 28px;
+}
+article div#judul input#gnr{
+    margin-left: 45px;
+}
+article div#judul input#submit{
+    float: right;
+    width: 60px;
+    margin: 22px;
+}
+
 /*------------------------bagian isi (daftar komiknya)---------------------*/
 article div#daftarKomik{ /*sekotak daftar komik*/
     margin: auto;   /*ditaruh tengah*/
